# openmach

./: .gitignore  .setup.sh  AGENTS.md  LICENSE  Makerules  README  README.md  aclocal.m4  add_epilog_debug.sh  batch_license_cleanup.sh  build_i386.sh  build_with_new_config.sh  debug_build.sh  debug_writeroutine.sh  generate_configure_ac.sh  license_cleanup_report.txt  license_modernization.sh  makefile_review_cwd_kernel.txt  micro_batch_license_cleanup.sh  micro_batch_license_cleanup_report.txt  mig_stub_emergency.sh  mig_stub_generator.sh  openmach-toolchain.sh  replace_function_body.sh  revised_license_cleanup.sh  run_autotools_and_configure.sh  setup.sh  target_investigation_kernel_dir_step5.txt  target_investigation_kernel_dir_step5.txt.all_matches  test_boot.sh
.codex/: setup.sh
bootstrap/: assert.h  bootstrap.c  def_pager_setup.c  default_pager.c  defs.h  dir.h  disk_inode.h  disk_inode_ffs.h  ext2_file_io.c  ext2_fs.h  ffs_compat.c  ffs_compat.h  ffs_file_io.c  file_io.c  file_io.h  fs.h  kalloc.c  load.c  minix_ffs_compat.c  minix_ffs_compat.h  minix_file_io.c  minix_fs.h  minix_super.h  queue.h  strfcns.c  wiring.c  wiring.h
docs/: Architecture_Design_Implementation.md  Doxyfile  Makefile
docs/sphinx/: conf.py  index.rst
i386/: Makeconf  Makeconf.in  Makeconf.in.bak  Makefile  Makefile.in  aclocal.m4  compile_commands.json  config.cache  config.h.in  config.h.in~  config.log.old  config.status  config.status.old  configure  configure.ac  configure.in  configure~
i386/autom4te.cache/: output.0  output.3  output.4  output.5  output.6  requests  traces.0  traces.1  traces.3  traces.4  traces.5  traces.6
i386/boot/bsd/: Makefile
i386/boot/linux/: Makefile
i386/bootstrap/: Makefile
i386/include/: Makefile
i386/include/mach/machine/: bios.h  vm_types.h
i386/kernel/: Makefile  Makefile.in
i386/kernel/i386/: debug.h  debug_i386.c  idt.c  idt.h  ktss.h  vm_param.h
i386/kernel/i386at/: idt.h  int_init.c
i386/kernel/imps/: Makefile  apic.h  cpu_number.h  cpus.h  imps.c
i386/libmach/: Makefile  Makefile.in  bootstrap-mig.d  bootstrap_user.c  core  default_pager_helper_server.c  default_pager_helper_user.c  default_pager_user.c  depend  device_reply_server.c  device_reply_user.c  device_request_server.c  device_request_user.c  device_user.c  exc_server.c  exc_user.c  mach4_interface_server.c  mach4_interface_user.c  mach_debug_user.c  mach_host_user.c  mach_i386_server.c  mach_i386_user.c  mach_interface.d  mach_interface_user.c  mach_port_user.c  machid_debug_user.c  machid_dpager_user.c  machid_user.c  memory_object_default_server.c  memory_object_default_user.c  memory_object_user_server.c  memory_object_user_user.c  netname-mig.d  netname_server.c  netname_user.c  notify_user_server.c  notify_user_user.c
i386/libmach/c/: Makefile
i386/libmach/exec/: Makefile
i386/libmach/standalone/: Makefile  _exit.d  _setjmp.d
i386/libmach/unixoid/: Makefile
i386/libthreads/: Makefile
i386/mig/: Makefile  Makefile.in  cpu.h  cpu.symc  depend  lexxer.c  lexxer.d  mig  migcom  parser.c  parser.h
include/: mach.h  mach_init.h  px.h
include/device/: audio_status.h  bpf.h  device.defs  device_reply.defs  device_request.defs  device_types.defs  device_types.h  disk_status.h  net_status.h  tape_status.h  tty_status.h
include/mach/: alert.h  boolean.h  boot.h  bootstrap.defs  cthreads.h  default_pager.defs  default_pager_helper.defs  default_pager_types.defs  default_pager_types.h  error.h  errorlib.h  exc.defs  exception.h  flick_mach3.h  flick_mach3_glue.h  flick_mach3mig_glue.h  host_info.h  inline.h  kern_return.h  lmm.h  mach.defs  mach_param.h  mach_traps.h  mach_types.h  machine.h  macro_help.h  memory_object.h  message.h  mig_errors.h  mig_support.h  msg_type.h  norma_special_ports.h  notify.h  pc_sample.h  policy.h  port.h  proc_ops.h  processor_info.h  profil.h  profilparam.h  (+13 more)
include/mach_debug/: hash_info.h  ipc_info.h  mach_debug_server.c  mach_debug_types.h  mach_debug_user.c  mach_debug_user.h  pc_info.h  vm_info.h  zone_info.h
include/servers/: machid_lib.h  machid_types.h  netname_defs.h
kernel/: Makerules
kernel/chips/: atm.c  atmreg.h  audio.c  audio_config.h  audio_defs.h  bt431.c  bt431.h  bt455.c  bt455.h  busses.c  busses.h  cfb_hdw.c  cfb_misc.c  dc503.h  dtop.h  dtop_hdw.c  dz_7085.h  dz_defs.h  eccreg.h  fb_misc.c  fdc_82077.h  fdc_82077_hdw.c  ims332.c  isdn_79c30.h  isdn_79c30_hdw.c  lance.h  lk201.c  lk201.h  mc_clock.h  nc.c  nc.h  nw_mk.c  nw_mk.h  screen_defs.h  screen_switch.c  screen_switch.h  (+10 more)
libmach/: mach_error_string.c  mach_init.c  mach_msg.c  mach_msg_destroy.c  mach_msg_receive.c  mach_msg_send.c  mach_msg_server.c  mig_allocate.c  mig_deallocate.c  mig_reply_setup.c  mig_strncpy.c  mig_support.c  ms_mach_port_allocate.c  ms_mach_port_allocate_name.c  ms_mach_port_deallocate.c  ms_mach_port_insert_right.c  ms_task_create.c  ms_task_set_special_port.c  ms_task_suspend.c  ms_task_terminate.c  ms_thread_depress_abort.c  ms_vm_allocate.c  ms_vm_deallocate.c  ms_vm_map.c  posix_retry.c  slot_name.c
libthreads/: call.c  cprocs.c  cthread_data.c  cthread_internals.h  cthreads.c  malloc.c  mig_support.c  options.h  stack.c  sync.c
mach4/: Makerules  Makerules.top
mig/: Makerules  alloc.h  boolean.h  cpu.h  depend  error.c  error.d  global.c  global.d  global.h  header.d  lexxer.c  lexxer.l  lexxer.l.orig.bak  lexxer.l.orig_restored_bak2  lexxer.l.original_restored_bak  lexxer.l.restored_original  message.h  mig  mig.sh  mig_string.h  migcom.c  parser.c  parser.h  parser.y  parser.y.restored_original  routine.h  server.c  server.c.bak  statement.h  type.h  utils.c  utils.c.bak  write.c
(+175 files in other folders)
